Make some changes to display the new UI

--- a/index.html
+++ b/index.html
@@ -5,9 +5,183 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+    <div class="header">
+        Rock Paper Scissors
+    </div>
+
+
+
+    <div class="buttons">
+        <div class="button-svg" id="ROCK">
+            <svg class="svg-icon rock" version="1.1" id="Graphic_Elements" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+	        y="0px" viewBox="0 0 1200 1200" style="enable-background:new 0 0 1200 1200;" xml:space="preserve">
+            <path class="st0" d="M817.5,1128H363.8l14.6-170.7c0,0-252.3-201.3-229.1-371.7c10.6-77.6,65.1-115,73.8-128.1
+                c14.1-21.2,3.8-128.5,21.4-238C266.4,84,347.8,57.5,424.5,78.4c77.6,21.2,66.2,85.5,66.2,85.5s48.8-73.2,126.9-58.5
+                c67.3,12.6,73.2,87.8,73.2,87.8s52.2-59.7,112.2-39c91.8,31.6,68.3,131.7,68.3,131.7s121.8-101,165.8,25.8s-19.5,208.1-30.8,306.2
+                c-30.5,265.2-183.7,354-183.7,354L817.5,1128z"/>
+            <g class="st1">
+                <path d="M817.5,1128H363.8l14.6-170.7c0,0-252.3-201.3-229.1-371.7c10.6-77.6,65.1-115,73.8-128.1c14.1-21.2,3.8-128.5,21.4-238
+                    C266.4,84,347.8,57.5,424.5,78.4c77.6,21.2,66.2,85.5,66.2,85.5s48.8-73.2,126.9-58.5c67.3,12.6,73.2,87.8,73.2,87.8
+                    s52.2-59.7,112.2-39c91.8,31.6,68.3,131.7,68.3,131.7s121.8-101,165.8,25.8s-19.5,208.1-30.8,306.2
+                    c-30.5,265.2-183.7,354-183.7,354L817.5,1128z"/>
+            </g>
+            <path class="st2" d="M817.5,1150H363.8c-12.2,0-22-9.9-22-22c0-0.6,0-1.2,0.1-1.8l13.7-159.2c-46.9-39.5-250.2-220.9-228-384.3
+                c9.4-69.2,50.2-109.9,69.8-129.5c3-3,6.7-6.7,7.6-8c3.4-7.2,4.6-42,5.5-72.7c1.5-44.4,3.2-99.7,12.4-156.4
+                c11.1-69,37.7-117.4,79-144.1c35.5-22.9,79.9-28,128.4-14.7c42.5,11.6,64.7,35.3,75.1,59.2c25.7-21.1,65.3-42.1,116.2-32.6
+                c44.9,8.4,69.5,40.2,81.6,69.7c25-17.4,63.7-35,106.9-20.1c61.2,21,81.9,69.5,85.5,110.9c25.3-12.9,59.8-24.3,92.6-15.1
+                c31.9,8.9,55.3,34.3,69.5,75.4c32.1,92.9,10.4,164.9-8.8,228.4c-9,29.8-17.5,58-20.9,87.5C1000.9,855.8,880.9,957.8,844,984
+                l-4.5,144.7C839.1,1140.6,829.4,1150,817.5,1150z M387.8,1106h408.4l4.2-134.8c0.2-7.6,4.4-14.5,11-18.3
+                c1.4-0.8,144.2-87.7,172.9-337.5c3.8-33.5,13.3-64.8,22.5-95.2c19-62.7,36.9-121.9,9.4-201.3c-9.2-26.6-22.6-42.6-39.8-47.4
+                c-38.7-10.9-90.6,30.9-91.1,31.3c-9.4,7.7-23.2,6.4-31-2.9c-4.4-5.3-6-12.4-4.5-19.1c1.9-8.2,16.3-81.7-54-105.9
+                c-45.5-15.6-88.1,32.2-88.5,32.7c-8,9.1-21.9,10-31,2c-4.3-3.8-7-9.1-7.4-14.8c-0.2-2.3-5.7-58.6-55.3-67.9
+                C551,115.2,510.7,173.6,509,176.1c-6.8,10.1-20.4,12.8-30.5,6.1c-7.2-4.8-11-13.5-9.4-22.1c1.1-7.3,4.1-45.6-50.3-60.5
+                c-25.2-6.9-61.8-10.8-93,9.3c-30.4,19.6-50.3,58-59.4,114.1c-8.7,54-10.4,107.7-11.8,150.9c-1.8,55.6-3,80.8-13,95.8
+                c-3,4.5-7.2,8.7-13,14.5c-17.4,17.4-49.9,49.9-57.3,104.3c-21.3,156.2,218.6,349.7,221,351.6c5.7,4.6,8.8,11.7,8.2,19.1L387.8,1106z
+                "/>
+            <path class="st0" d="M472.8,181.8c0,0-113.2,307.9-5.4,327.7c121.4,22.4,163.8-39.3,167.4-87.2c4.9-63.2,47-236.9,47-236.9
+                s-113.7,359.9,5.4,376.2c123.9,16.9,118.2-88.1,135.3-135.3s42.1-172.1,42.1-172.1s-53.3,204.6-65.2,251.1
+                c-25.5,99.5,161.1,208.1,192.8-57.4l21.7-8.1"/>
+            <g class="st1">
+                <path d="M472.8,181.8c0,0-113.2,307.9-5.4,327.7c121.4,22.4,163.8-39.3,167.4-87.2c4.9-63.2,47-236.9,47-236.9
+                    s-113.7,359.9,5.4,376.2c123.9,16.9,118.2-88.1,135.3-135.3s42.1-172.1,42.1-172.1s-53.3,204.6-65.2,251.1
+                    c-25.5,99.5,161.1,208.1,192.8-57.4l21.7-8.1"/>
+            </g>
+            <path class="st2" d="M883.9,636.2c-24.6,0-49.3-9.7-70-28.2c-13.3-11.8-23.8-26.4-30.7-42.8c-21.8,15.8-53,24.4-99,18.1
+                c-22-3-40.1-14.9-52.4-34.3c-7.8-12.2-13-27.5-16.3-44.7c-1.3,1.1-2.5,2.1-3.9,3.1c-24.4,18.8-70,38.1-148.3,23.7
+                c-21-3.9-37.9-16-48.8-35.2c-47.7-83.7,28.6-297.6,37.5-321.7c4.6-11.2,17.5-16.6,28.7-12c10.7,4.4,16.1,16.2,12.6,27.2
+                c-30.8,83.7-69,235-40.6,284.7c4.5,8,10.3,12.2,18.6,13.8c49.4,9.1,88.7,3.8,113.5-15.3c13.6-10.5,23.1-25.5,26.6-42.4
+                c4.6-105.8,43.2-231.8,49.4-251.4c3.9-11.5,16.4-17.7,27.9-13.8c10.6,3.6,16.9,14.6,14.4,25.6c-0.4,1.7-41.8,172.7-46.5,233.4
+                c-0.3,4.1-0.8,8.1-1.6,12.1c-2.1,53.3,6.7,78.1,13.9,89.4c5.5,8.6,12,13,21.2,14.3c50.2,6.8,73-6.9,86.7-34.9c0.3-1.7,0.7-3.3,1.1-5
+                c12-46.6,65.3-251.2,65.3-251.2c3.3-11.7,15.4-18.5,27.1-15.2c10.9,3.1,17.7,13.9,15.7,25.1c-1,5.2-25.5,127-43,175.3
+                c-2.7,7.4-5,17.6-7.3,28.4c-3.7,16.5-8.2,36.6-16.5,55.8c-2.3,20.1,6.6,41.9,23.9,57.4c17.5,15.7,39.2,20.9,58,13.8
+                c34.6-13,59.8-65.5,69.1-143.8c1-8.2,6.4-15.1,14.1-18l21.7-8.1c11.6-3.8,24,2.6,27.7,14.1c3.5,10.8-1.8,22.6-12.3,27l-9.3,3.5
+                c-16.4,113.5-60.6,153.2-95.5,166.3C906.2,634.1,895.1,636.2,883.9,636.2z"/>
+            <path class="st0" d="M386.2,695.4c0,0,37.8-76.2,95.5-82.8c282.4-32.1,212.4-266.8,15.3-236.8c-292.8,44.6-343.3,174.4-343.3,174.4"
+                />
+            <g class="st1">
+                <path d="M386.2,695.4c0,0,37.8-76.2,95.5-82.8c282.4-32.1,212.4-266.8,15.3-236.8c-292.8,44.6-343.3,174.4-343.3,174.4"/>
+            </g>
+            <path class="st2" d="M386.1,717.4c-12.2,0-22-9.9-22-22c0-3.4,0.8-6.7,2.3-9.7c1.8-3.5,43.9-87,112.7-94.8
+                c85.4-9.7,144.9-40.2,163.1-83.7c9.8-23.4,6-48.8-10.4-69.9c-26-33.4-75.3-48.3-131.7-39.7C226.6,439.2,174.5,557.3,174,558.5
+                c-4.9,11.1-17.8,16.2-29,11.3c-10.6-4.6-15.8-16.6-11.9-27.5c2.2-5.8,58.6-142.2,360.5-188.2c72.4-11,137,10,173,56.1
+                c26.1,33.5,32.2,76.1,16.3,114c-14.5,34.4-59.5,94.5-198.7,110.3c-44.5,5-78,70-78.3,70.7C402.2,712.7,394.5,717.4,386.1,717.4z"/>
+            </svg>
+        </div>
+        <div class="button-svg" id="PAPER">
+            <svg class="svg-icon" version="1.1" id="Graphic_Elements" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+            y="0px" viewBox="0 0 1200 1200" style="enable-background:new 0 0 1200 1200;" xml:space="preserve">
+            <path class="st0" d="M954.2,336.7c-32,76.4-73.7,246.8-107.6,220.5c-17.9-14,44.7-203.8,56.4-338.6c7.5-86.6-76.3-75-90.3-22.6
+                c-16.1,60.6-65.7,327.3-75.2,327.3c-26.3,0,0.8-310.3,0.3-394.6c-0.5-91.1-98.6-79.6-108.4-9c-6.8,49.2-27.4,404.7-36.8,405.6
+                c-24.9,2.3-74.7-250.5-83.1-312.2C495.9,113.8,391,121,400,234c6.5,81.9,55.9,307.5,55.9,307.5s20,154.1-8.1,179.6
+                c-40.8,37-145.7-67.8-215.5-72.4c-51-3.4-102.5,46.6-56.5,87.6c21.7,19.3,159,108.1,228.5,179.7c27.4,58.6,112.2,105.4,112.2,105.4
+                l12.2,115h295l3-96.4c0,0,47.7-37.6,99.8-139.8c18.2-35.7,35.4-195.7,35.4-241.4c0-33.9,57.1-239.1,76.6-301.1
+                C1059.2,291.9,984,265.5,954.2,336.7"/>
+            <g class="st1">
+                <path d="M954.2,336.7c-32,76.4-73.7,246.8-107.6,220.5c-17.9-14,44.7-203.8,56.4-338.6c7.5-86.6-76.3-75-90.3-22.6
+                    c-16.1,60.6-65.7,327.3-75.2,327.3c-26.3,0,0.8-310.3,0.3-394.6c-0.5-91.1-98.6-79.6-108.4-9c-6.8,49.2-27.4,404.7-36.8,405.6
+                    c-24.9,2.3-74.7-250.5-83.1-312.2C495.9,113.8,391,121,400,234c6.5,81.9,55.9,307.5,55.9,307.5s20,154.1-8.1,179.6
+                    c-40.8,37-145.7-67.8-215.5-72.4c-51-3.4-102.5,46.6-56.5,87.6c21.7,19.3,159,108.1,228.5,179.7c27.4,58.6,112.2,105.4,112.2,105.4
+                    l12.2,115h295l3-96.4c0,0,47.7-37.6,99.8-139.8c18.2-35.7,35.4-195.7,35.4-241.4c0-33.9,57.1-239.1,76.6-301.1
+                    C1059.2,291.9,984,265.6,954.2,336.7z"/>
+            </g>
+            <path class="st2" d="M823.7,1150h-295c-6.9,0-12.8-5.2-13.5-12.1l-11.5-108.2c-20.5-12.2-85.1-53.8-110.7-105.8
+                c-48.4-49.3-131-108.2-180.6-143.6c-22.5-16.1-38.8-27.7-45.7-33.8c-21-18.7-27.6-42.3-18.2-64.6c12.2-29,48.6-49.1,84.7-46.6
+                c33.3,2.2,71.2,23.6,107.9,44.3c38.3,21.6,81.7,46.1,97.6,31.6c13.6-12.3,13-96.3,3.8-167.2c-3.4-15.4-49.6-228.1-56-308.8
+                c-3.7-47,13.2-99.8,59.3-104.8c32.4-3.5,69.2,23.2,77.1,80.9c8.5,62.3,40.7,217.6,62.7,278.4c5.6-50.1,13-151.4,18.4-224.2
+                c5.1-69.2,9.5-129,12-147.6c6.2-45.1,43.3-69.7,75.8-67.7c27.3,1.8,59.3,23.4,59.6,78.5c0.2,25.6-2.2,70.7-4.8,122.9
+                c-3.3,65-8.3,161.4-6.8,217.9c9.2-39.7,21.2-97.4,31-144.3c11.7-56.2,22.7-109.4,28.9-132.7c8.8-33.2,41.6-55.7,73-50.2
+                c24.1,4.2,48.3,26.8,43.9,77.4c-5.8,66.3-23.8,146.2-38.3,210.4c-10.2,45-21.5,95.4-21.5,113.9c16.1-15.1,42-91.6,56.5-134.1
+                c10-29.5,19.4-57.3,28.3-78.6l0,0c19.2-45.9,55.1-56.9,80.3-47.6c23.3,8.5,42.5,36.6,29.5,78c-20.8,66.2-76,266.8-76,297
+                c0,42.9-16.6,207.7-36.9,247.5c-43.7,85.8-84.6,127.3-98.5,140l-2.8,90.4C837.1,1144.1,831.1,1150,823.7,1150z M540.9,1122.9h269.7
+                l2.6-83.2c0.1-4,2-7.7,5.2-10.2c0.4-0.3,46.3-37.7,96.1-135.3c15.8-31,34-186.3,34-235.2c0-37.8,60.7-252.6,77.2-305.2
+                c7.7-24.6-0.9-40-12.9-44.4c-13.5-4.9-33.7,3.2-46,32.6l0,0c-8.5,20.4-17.8,47.8-27.7,76.8c-30.6,90.2-51.2,145.6-78,153.7
+                c-7.9,2.4-16.4,0.7-22.8-4.5c-14.6-11.3-10.4-37.3,13.5-143.7c14.3-63.4,32.1-142.3,37.7-206.8c2.5-27.9-5.5-45.5-21.5-48.4
+                c-15.7-2.7-36.3,8.8-42.1,30.4c-6,22.6-17,75.3-28.6,131.2c-42.8,206.2-44.4,206.2-59.8,206.2c-4.8,0-9.4-2.1-12.7-5.6
+                c-15.9-16.8-15.2-88.2-5.3-281.1c2.7-51.8,4.9-96.5,4.8-121.4c-0.2-30.9-13-50.2-34.3-51.6c-20.2-1.3-43,14.9-47.1,44.3
+                c-2.5,17.8-6.8,77.1-11.8,145.9c-19.8,269.7-20.8,269.8-37.1,271.3c-15.9,1.4-30.6-8.1-62.2-142.5C514,321.3,500,243.7,496,214.9
+                c-5.5-40.6-28-59.8-47.3-57.6c-19.7,2.1-39.1,26.7-35.2,75.6c6.4,80.1,55.1,303.4,55.6,305.7c0.1,0.4,0.1,0.8,0.2,1.2
+                c4.9,37.8,18.5,163.3-12.4,191.4c-30.4,27.6-78.4,0.6-129.2-28.1c-34.1-19.2-69.3-39.1-96.4-40.9c-24.3-1.6-50.2,11.9-57.9,30
+                c-4.8,11.5-1,22.9,11.3,33.9c5.9,5.2,22.4,17,43.4,32c54.1,38.6,135.9,97,185.8,148.4c1,1.1,1.9,2.3,2.5,3.7
+                c25.2,53.8,105.7,98.9,106.5,99.3c3.9,2.2,6.5,6.1,6.9,10.5L540.9,1122.9z"/>
+            <path class="st0" d="M454.3,717.2c0,0,78.8,0,134.8,31.1s99.5,99.5,99.5,99.5"/>
+            <g class="st1">
+                <path d="M454.3,717.2c0,0,78.8,0,134.8,31.1s99.5,99.5,99.5,99.5"/>
+            </g>
+            <path class="st2" d="M688.5,861.3c-4.7,0-9-2.4-11.5-6.3c-0.4-0.7-42.4-65.9-94.6-94.9S455,730.7,454.3,730.7
+                c-7.5,0-13.6-6.1-13.6-13.6s6.1-13.6,13.6-13.6c3.4,0,83,0.4,141.3,32.8S698.1,837.6,700,840.5c4,6.3,2.2,14.7-4.2,18.7
+                C693.7,860.6,691.1,861.3,688.5,861.3L688.5,861.3z"/>
+            </svg>
+        </div>
+        <div class="button-svg" id="SCISSORS">
+            <svg class="svg-icon" version="1.1" id="Graphic_Elements" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+	        y="0px" viewBox="0 0 1200 1200" style="enable-background:new 0 0 1200 1200;" xml:space="preserve">
+            <path class="st0" d="M724.8,1135.6H427.3l9.6-112c0,0-119.5-147.8-103.1-259.4c21.6-146.9,20.9-225.5,20.9-225.5
+                s-17.5-296.5-19.1-383.8c-2-106.4,116.9-122.2,128.9-17.4c15.8,139,38.9,402.7,38.9,402.7c20.7-52.3,92.5-336.6,108.6-402.7
+                c27.8-114.1,143.5-80.3,132.8,3.1c-16.2,126.6-103.1,365-103.1,365s34.3-39.1,73.6-25.6c60.2,20.8,44.8,86.4,44.8,86.4
+                s63.4-36.1,92.2,47.1s11.7,124.5-3.7,187.4C819.8,919.4,728,1033.2,728,1033.2L724.8,1135.6z"/>
+            <g class="st1">
+                <path d="M724.8,1135.6H427.3l9.6-112c0,0-119.5-147.8-103.1-259.4c21.6-146.9,20.9-225.5,20.9-225.5s-17.5-296.5-19.1-383.8
+                    c-2-106.4,116.9-122.2,128.9-17.4c15.8,139,38.9,402.7,38.9,402.7c20.7-52.3,92.5-336.6,108.6-402.7
+                    c27.8-114.1,143.5-80.3,132.8,3.1c-16.2,126.6-103.1,365-103.1,365s34.3-39.1,73.6-25.6c60.2,20.8,44.8,86.4,44.8,86.4
+                    s63.4-36.1,92.2,47.1s11.7,124.5-3.7,187.4C819.8,919.4,728,1033.2,728,1033.2L724.8,1135.6z"/>
+            </g>
+            <path class="st2" d="M724.8,1150H427.3c-8,0-14.4-6.5-14.4-14.4c0-0.4,0-0.8,0.1-1.2L422,1028c-20.7-26.8-118.2-159.5-102.5-266
+                c21.2-143.8,20.7-222.5,20.7-223.2c-0.2-2.2-17.5-297-19.2-383.6C319.9,91,358.6,54.8,397.5,52.2c35.5-2.2,74.3,22.6,81.2,83.7
+                c10.5,92.7,24.4,242.1,32.5,330.7C540.4,364,584.8,188,597.9,134.1c16.3-67,61.8-89.9,99.5-82.9c46.5,8.6,66.4,53.4,61.6,91.3
+                c-12.2,95.8-63.3,251.5-89,326.1c14.3-5.8,31.5-8.4,49.9-2.1c43.4,15,55.8,50.9,56.5,79.3c11-2.1,24.8-2.5,39,2.8
+                c22.6,8.5,39.6,28.8,50.5,60.3c26.9,77.7,15.3,122.6,2,174.6c-1.7,6.8-3.5,13.7-5.3,20.9c-26.6,109.3-103.7,212.6-120.3,234l-3,97.7
+                C739.1,1143.9,732.7,1150.1,724.8,1150z M443,1121.2h267.9l2.8-88.4c0.1-3.1,1.2-6.2,3.2-8.6c0.9-1.1,90-112.8,117.7-226.5
+                c1.8-7.3,3.6-14.4,5.4-21.3c13.2-51.4,22.8-88.6-1.3-158c-7.9-22.9-19.1-37.2-33.2-42.7c-18.8-7.2-38.1,3.3-38.3,3.4
+                c-7,3.9-15.8,1.4-19.7-5.6c-1.8-3.1-2.3-6.8-1.5-10.3c1.2-5.4,10.7-53.6-35.4-69.5c-29.8-10.2-57.8,21.1-58.1,21.5
+                c-5.3,6-14.4,6.6-20.3,1.3c-4.5-3.9-6.1-10.2-4-15.8c0.9-2.4,86.5-238.4,102.3-361.9c4.3-33.5-16-55.2-38.2-59.3
+                c-22.7-4.2-53.6,9.4-66.2,61.4c-10.7,43.9-86.8,348-109.2,404.6c-2.9,7.4-11.3,11.1-18.7,8.1c-5.1-2-8.6-6.7-9.1-12.1
+                c-0.2-2.6-23.3-265.1-38.9-402.3c-5.1-45.1-30.7-59.6-50.7-58.2c-25.2,1.7-50.3,27.5-49.4,73.6c1.6,86,19,380.2,19.1,383.2
+                c0.1,4,0.5,82.1-21,228.4c-15.3,104.2,98.9,246.8,100,248.3c2.3,2.9,3.5,6.6,3.1,10.3L443,1121.2z"/>
+            <path class="st0" d="M641.6,505.7c0,0-105.6,207-28.8,235.8s76.8-28.8,92.8-57.6S760,566.5,760,566.5s-68.5,140.9-71.1,172.3
+                c-3.9,46.5,52.6,63.2,75,44s48-83.2,48-83.2l22-15.7"/>
+            <g class="st1">
+                <path d="M641.6,505.7c0,0-105.6,207-28.8,235.8s76.8-28.8,92.8-57.6S760,566.5,760,566.5s-68.5,140.9-71.1,172.3
+                    c-3.9,46.5,52.6,63.2,75,44s48-83.2,48-83.2l22-15.7"/>
+            </g>
+            <path class="st2" d="M739.7,805.1c-11-0.1-21.9-2.7-31.7-7.8c-16.8-8.6-28-22.8-32-39.7c-0.7,0.4-1.5,0.7-2.2,1.1
+                c-17,7.7-38.5,6.5-66-3.8c-14.7-5.5-25.6-16.6-31.6-32c-25.9-66.7,44.5-208,52.6-223.9c3.5-7.1,12.2-10.1,19.3-6.6
+                s10.1,12.2,6.6,19.3c-0.1,0.1-0.1,0.2-0.2,0.4c-20.4,40-69.4,154-51.4,200.3c3,7.8,7.8,12.7,14.8,15.4c19.6,7.3,34.3,8.9,43.9,4.5
+                c11.2-5.1,16.5-19.2,22-34.2c2.7-7.3,5.5-14.8,9.2-21.5c1.8-3.3,4-7.5,6.4-12.3c19.3-45.8,43.4-95.6,47.6-104.4
+                c3.6-7.1,12.3-9.9,19.4-6.3c6.7,3.4,9.7,11.4,6.8,18.3c-1.4,3.2-29.6,68.2-47.6,104.4c-12.3,29.1-21.5,53.8-22.3,63.4
+                c-1.6,18.8,10.5,27.9,17.8,31.6c11.8,6,26.5,6.2,33.4,0.2c14.3-12.3,34.6-54.1,44-77.6c1-2.6,2.8-4.8,5-6.4l22-15.7
+                c6.5-4.6,15.5-3.1,20.1,3.3s3.1,15.5-3.3,20.1L823.7,709c-6.5,15.5-28.6,66.2-50.4,84.8C764.5,801.3,752.5,805.1,739.7,805.1z"/>
+            <path class="st0" d="M450.7,851.8c0,0,25.1-48,62.6-54.3c125.3-20.9,137.7-165.8,8.4-146.1C329.6,680.6,338,772.5,338,772.5"/>
+            <g class="st1">
+                <path d="M450.7,851.8c0,0,25.1-48,62.6-54.3c125.3-20.9,137.7-165.8,8.4-146.1C329.6,680.6,338,772.5,338,772.5"/>
+            </g>
+            <path class="st2" d="M450.7,866.2c-8,0-14.4-6.5-14.4-14.4c0-2.3,0.6-4.6,1.6-6.6c1.2-2.2,28.9-54.5,73-61.8
+                c60.7-10.1,92.5-52.1,87.2-85.3c-4.2-26.3-32.7-38.7-74.3-32.4c-92.5,14.1-134.3,42.8-153.1,64.3c-19.2,22.1-18.4,40.6-18.4,41.4
+                c0.5,7.9-5.5,14.7-13.4,15.3c-7.8,0.6-14.7-5.2-15.4-13c-0.4-4.3-7.2-105.7,195.9-136.7c70.7-10.8,101.9,23.7,107.1,56.4
+                c7.5,46.7-32.8,105.2-111,118.2c-24.8,4.2-46.1,35.2-52.2,46.8C461,863.2,456.1,866.2,450.7,866.2z"/>
+            </svg>
+        </div>
+    </div>
+
+
+
+    <div class="choices">
+        <p><span class="light-text">You choose: </span><span class="your-added-text"></span></p>
+        <p><span class="light-text">Computer choose: </span><span class="computer-added-text"></span></p>
+    </div>
+
+    <div class="winner-declaration">
+        <p class="declaration"></p>
+    </div>
+
+    <div class="scores">
+        <p><span class="light-text">You: </span><span class="player-score">0</span></p>
+        <p><span class="light-text">Computer: </span><span class="computer-score">0</span></p>
+    </div>
+
     <script src="./index.js"></script>
 </body>
 </html>
